change theme color

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title> Bhavesh Suthar </title>
      <meta content="width=device-width, initial-scale=1" name="viewport">
+     <meta name="theme-color" content="#76f5db">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
